<resources>
    <string name="app_name">趣平方</string>
    <string name="action_settings">Settings</string>
    <string name="lesson_version">版本</string>
    <string name="lesson_all_class">全部年级</string>
    <string name="lesson_all_course">全部课程</string>
    <string name="course_pop_class_one">一年级</string>
    <string name="course_pop_class_two">二年级</string>
    <string name="course_pop_class_three">三年级</string>
    <string name="course_pop_class_four">四年级</string>
    <string name="course_pop_class_five">五年级</string>
    <string name="course_pop_class_six">六年级</string>
    <string name="course_pop_course_chinese">语文</string>
    <string name="course_pop_course_math">数学(敬请期待)</string>
    <string name="course_pop_course_all">全部课程</string>
    <string name="video_charge_reminder">您可以免费观看视频前30秒，观看完整视频请点击“立即购买”</string>
    <string name="course_right_now_buy">立即购买</string>
    <string name="lesson_video_detail_collect">收藏</string>
    <string name="lesson_video_detail_download">缓存</string>
    <string name="lesson_video_detail_comment">评论</string>
    <string name="lesson_video_detail_share">分享</string>
    <string name="write_your_comment">写下你的评论</string>
    <string name="video_comment_reply_who">回复@毛毛虫的评论</string>
    <string name="video_comment_content">写下你的评论</string>
    <string name="video_comment_tip">140</string>
    <string name="order_pay_money">支付金额：</string>
    <string name="confirm_pay">确认支付</string>
    <string name="activity_loginregist_login">登录</string>
    <string name="activity_loginregist_phone">手机号</string>
    <string name="activity_loginregist_password">密&#160;&#160;&#160;&#160;码</string>
    <string name="activity_loginregist_yuanshi_password">原始密码</string>
    <string name="activity_loginregist_shuru_pwd">请输入密码</string>
    <string name="activity_loginregist_shuru_new_pwd">请输入新密码</string>
    <string name="activity_loginregist_set_pwd">请设置密码</string>
    <string name="activity_loginregist_shuru_phone">请输入手机号</string>
    <string name="activity_loginregist_regist">下一步</string>
    <string name="activity_loginregist_regist_account">注册账号</string>
    <string name="activity_loginregist_zanbu_regist">暂不注册</string>
    <string name="activity_loginregist_regist_xinyonghu">注册新用户</string>
    <string name="activity_loginregist_yanzhengma">验证码</string>
    <string name="activity_loginregist_shuru_yanzhengma">请输入验证码</string>
    <string name="activity_loginregist_huoqu_yanzhengma">获取验证码</string>
    <string name="activity_loginregist_forget_pwd">忘记密码</string>
    <string name="activity_loginregist_sanfang_login">使用第三方账号登录</string>
    <string name="activity_loginregist_weixin_login">微信登录</string>
    <string name="activity_loginregist_qq_login">QQ登录</string>
    <string name="activity_loginregist_sina_login">新浪登录</string>
    <string name="activity_loginregist_next_means_agree">点击下一步按钮即表示您同意</string>
    <string name="activity_loginregist_next_agree">点击下一步按钮即表示您同意</string>
    <string name="activity_loginregist_bangding_means_agree">点击绑定按钮即表示您同意</string>
    <string name="activity_loginregist_xieyi">《用户协议》</string>
    <string name="activity_loginregist_laststep">上一步</string>
    <string name="activity_loginregist_nextstep">下一步</string>
    <string name="activity_loginregist_sure_tijiao">确认提交</string>
    <string name="activity_loginregist_yiyouaccount_login">使用已有账户登录</string>
    <string name="activity_loginregist_personinfo">个人信息</string>
    <string name="activity_loginregist_kaiqi_ququ">开启去趣找乐趣</string>
    <string name="activity_loginregist_baomingzhong">报名中</string>
    <string name="activity_loginregist_woshinvsheng">我是女生</string>
    <string name="activity_loginregist_woshinansheng">我是男生</string>
    <string name="activity_loginregist_336people_baoming">已有336人报名</string>
    <string name="activity_loginregist_xieyi_title">用户协议</string>
    <string name="activity_loginregist_sure">确定</string>
    <string name="activity_loginregist_shangchuan_success">上传信息成功</string>
    <string name="activity_loginregist_shangchuan_faile">上传信息失败</string>
    <string name="activity_loginregist_no_net">当前无网络，请检查网络!</string>
    <string name="activity_loginregist_choose_sex">请选择性别</string>
    <string name="activity_loginregist_reset_pwd_faile">修改密码失败</string>
    <string name="activity_loginregist_reset_pwd_success">修改密码成功，将为您自动登录</string>
    <string name="activity_loginregist_mobile_bunengkong">手机号不能为空</string>
    <string name="activity_loginregist_shuru_right_mobile">请输入正确的手机号</string>
    <string name="activity_loginregist_shuru_11wei_mobile">请输入11位手机号</string>
    <string name="activity_loginregist_mobile_pwd_bunengkong">手机号和密码不能为空</string>
    <string name="activity_loginregist_pwd_bunengkong">密码不能为空</string>
    <string name="activity_loginregist_shuru_620wei_pwd">请输入6~20位密码</string>
    <string name="activity_loginregist_shuru_shuzi_zimu_pwd">请输入由数字、字母构成的密码</string>
    <string name="activity_loginregist_yanzhengma_bunengkong">验证码不能为空</string>
    <string name="activity_loginregist_yanzhengma_cuowu">验证码错误</string>
    <string name="activity_loginregist_fasong_success">发送成功</string>
    <string name="activity_loginregist_fasong_yanzhengma_faile">发送验证码失败</string>
    <string name="activity_loginregist_login_success">登录成功</string>
    <string name="activity_loginregist_login_faile">登录失败</string>
    <string name="activity_loginregist_regist_success">注册成功</string>
    <string name="activity_loginregist_regist_faile">注册失败</string>
    <string name="activity_loginregist_upload_sanfang_userinfo_faile">上传三方用户信息失败</string>
    <string name="activity_loginregist_shouji_bangding">手机绑定</string>
    <string name="activity_loginregist_bangding">绑定</string>
    <string name="activity_loginregist_yaoqingma">邀请码</string>
    <string name="activity_loginregist_bangdingshouji_tishi">为了您的账号安全\n请绑定您的手机号</string>
    <string name="activity_loginregist_regist_change_phone">修改手机号</string>
    <string name="activity_loginregist_yaoqingma_saomiao">邀请码扫描</string>
    <string name="activity_loginregist_yaoqingma_saomiao_tishi">将二维码图片对准扫描框即可自动扫描</string>
    <string name="activity_mine_person_info">个人信息</string>
    <string name="activity_mine_person_wanshan_info">完善信息</string>
    <string name="activity_mine_no_setting">未设置</string>
    <string name="activity_mine_setting">设置</string>
    <string name="activity_mine_change_skin">更换皮肤</string>
    <string name="activity_mine_my_langsong">我的朗诵</string>
    <string name="activity_mine_my_guankanlog">观看记录</string>
    <string name="activity_mine_my_shoucang">我的收藏</string>
    <string name="activity_mine_lixian_huancun">离线缓存</string>
    <string name="activity_mine_chongzhi_goumai">消费记录</string>
    <string name="activity_mine_account_chongzhi">账户充值</string>
    <string name="activity_mine_jiaocai_banben_xuanze">教材版本选择</string>
    <string name="activity_cache_list_titlebar">我的缓存</string>
    <string name="activity_cache_list_clean">清空</string>
    <string name="download_no_content_hint">想随时随地不费流量玩趣平方吗？快点把\n喜欢的视频缓存下来吧~</string>
    <string name="activity_mine_head">头像</string>
    <string name="activity_mine_nickname">昵称</string>
    <string name="activity_mine_sex">性别</string>
    <string name="activity_mine_man">男生</string>
    <string name="activity_mine_woman">女生</string>
    <string name="activity_mine_my_grade">年级</string>
    <string name="activity_mine_location">地区</string>
    <string name="activity_mine_dongcheng">东城</string>
    <string name="activity_mine_beijing">北京</string>
    <string name="activity_mine_phone">手机号</string>
    <string name="activity_mine_no_bangding">未绑定</string>
    <string name="activity_mine_yaoqingma">邀请码</string>
    <string name="activity_mine_shuru_yaoqingma">请输入邀请码</string>
    <string name="activity_mine_paizhao">拍照</string>
    <string name="activity_mine_getfrom_phone">从手机选择</string>
    <string name="activity_mine_cancle">取消</string>
    <string name="activity_mine_choose_province">选择省份</string>
    <string name="activity_mine_choose_city">选择地区</string>
    <string name="activity_mine_xiaoxi">消息</string>
    <string name="activity_mine_pinglun">评论</string>
    <string name="activity_mine_tongzhi">通知</string>
    <string name="activity_mine_huifupinglun">回复评论:&#160;&#160;</string>
    <string name="activity_mine_recharge">账户充值</string>
    <string name="activity_mine_dangqian_yue">当前余额:&#160;&#160;</string>
    <string name="activity_mine_lingyuan">0.0元</string>
    <string name="activity_mine_chongzhi_jine">充值金额:&#160;&#160;</string>
    <string name="activity_mine_zhifu_jine">支付金额:&#160;&#160;</string>
    <string name="activity_mine_liji_zhifu">立即支付</string>
    <string name="activity_mine_jine_sanshi">30元</string>
    <string name="activity_mine_jine_yibai">100元</string>
    <string name="activity_mine_jine_sanbai">300元</string>
    <string name="activity_mine_shuru_zhengshu_jine">请输入整数金额</string>
    <string name="activity_mine_kaitong_vip">开通VIP会员购买视频可享7折优惠</string>
    <string name="activity_mine_xiangqing">详情</string>
    <string name="activity_mine_bu_kaitong">不开通</string>
    <string name="activity_mine_yigeyue">一个月</string>
    <string name="activity_mine_liugeyue">六个月</string>
    <string name="activity_mine_yinian">一年</string>
    <string name="activity_loginregist_next">下一步</string>
    <string name="activity_mine_kaitonghuiyuan_shiyuan">开通会员￥10</string>
    <string name="activity_mine_kaitonghuiyuan_tishi">账户金额中不包含开通会员费用</string>
    <string name="activity_mine_zhifufangshi">支付方式</string>
    <string name="activity_mine_weixin_pay">微信支付</string>
    <string name="activity_mine_zhifubao_pay">支付宝支付</string>
    <string name="activity_mine_chongzhi_wancheng">充值完成</string>
    <string name="activity_mine_chongzhi_wancheng_tishi">充值完成啦，\n您现在可以去购买您要观看的视频啦!</string>
    <string name="activity_mine_chongzhi_buy_log">消费记录</string>
    <string name="activity_mine_chongzhi">充值</string>
    <string name="activity_mine_chongzhi_finish">支付成功</string>
    <string name="activity_mine_jiage">价格:&#160;&#160;</string>
    <string name="activity_mine_yigoumai">已购买</string>
    <string name="activity_mine_guankan_jilu">观看记录</string>
    <string name="activity_mine_qingkong">清空</string>
    <string name="activity_mine_save">保存</string>
    <string name="activity_mine_set_nickname">设置昵称</string>
    <string name="activity_mine_shuru_nicheng">输入昵称</string>
    <string name="activity_cache_has_download">已下载0%</string>
    <string name="activity_cache_list_video_size">28M</string>
    <string name="activity_mine_choose_sex">选择性别</string>
    <string name="activity_mine_choose_grade">选择年级</string>
    <string name="activity_mine_yinianji">一年级</string>
    <string name="activity_mine_ernianji">二年级</string>
    <string name="activity_mine_sannianji">三年级</string>
    <string name="activity_mine_sinianji">四年级</string>
    <string name="activity_mine_wunianji">五年级</string>
    <string name="activity_mine_liunianji">六年级</string>
    <string name="activity_mine_qingkong_shoucang_tishi">亲，您还没有收藏任何作品，快去首页找找看</string>
    <string name="activity_mine_chongzhi_log">充值记录</string>
    <string name="activity_mine_goumai_log">购买记录</string>
    <string name="activity_mine_fankui">请输入您的反馈意见，我们将为您不断改进~</string>
    <string name="activity_mine_geren_shezhi">个人设置</string>
    <string name="activity_mine_setting_qingli_cache">清理缓存</string>
    <string name="activity_mine_setting_feedback">意见反馈</string>
    <string name="activity_mine_setting_version">版本号</string>
    <string name="activity_mine_setting_logout">退出登录</string>
    <string name="activity_mine_tongzhi_content">通知详情</string>
    <string name="title_bar_cancel">取消</string>
    <string name="activity_recitation_myrecitation">我的朗诵</string>
    <string name="fragment_uploaded_record_auditing">正在审核中</string>
    <string name="fragment_record_all_select">全选</string>
    <string name="fragment_record_delete">删除</string>
    <string name="fragment_localrecord_nodata">亲，暂无录音，赶快录音吧</string>
    <string name="fragment_uploaded_record_no_data">亲，暂无上传视频，赶快去上传吧</string>
</resources>